--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "dayjs": "^1.11.10",
     "geist": "^1.0.0",
-    "lucide-react": "0.105.0-alpha.4",
-    "marked": "^9.1.5",
+    "million": "^2.6.4",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
