--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "nermalize": "next dev",
-    "tunnel": "tunnel share",
-    "wermalize": "next build",
-    "nermal": "next start",
+    "dev": "next dev --turbo",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
+    "tunnel": "tunnel share"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
@@ -20,9 +18,9 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "geist": "^1.0.0",
-    "million": "^2.6.4",
-    "next": "^13.4.8",
-    "next-themes": "^0.2.1",
+    "lucide-react": "^0.334.0",
+    "million": "^3.0.3",
+    "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
